--- a/src/components/main1/Main1.module.css
+++ b/src/components/main1/Main1.module.css
@@ -5,3 +5,38 @@
     background-repeat: no-repeat;
     height: fit-content;
 }
+
+#catalogue {
+    width: 90vw;
+    height: 7vw;
+    background-color: black;
+    margin: 7vh auto 7vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#catalogue p {
+    color: white;
+    letter-spacing: 0.728rem;
+    font-weight: 100;
+}
+
+.anchor {
+    display: block;
+    height: 115px; 
+    margin-top: -115px;
+    visibility: hidden;
+}
+
+#sobre {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90vw;
+    margin: auto;
+    gap: 5vh;
+    text-align: center;
+    font-size: 1.2rem;
+    margin-bottom: 7vh;
+}
